--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -43,3 +43,14 @@
     left: 0;
     margin-left: 8%;
 }
+.Bflex{
+
+display: flex;
+
+}
+.leaflet-container{
+    position: absolute;
+    left: 10vw;
+    width: 90%;
+    height: 100%;
+}
