--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -18,7 +18,7 @@
 }
 .button{
     
-    border: 2px solid white;
+    border: 2px solid black;
     border-radius: 25px;
 }
 .footer{
@@ -27,7 +27,7 @@
     
 }
 #downbuttonR{
-    border: 2px solid white;
+    border: 2px solid black;
     border-radius: 25px;
     position: fixed;
     bottom: 1;
@@ -36,13 +36,34 @@
     
 }
 #downbuttonL{
-    border: 2px solid white;
+    border: 2px solid black;
     border-radius: 25px;
     position: fixed;
     bottom: 1;
     left: 0;
     margin-left: 8%;
 }
+
+.barcode{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70vh;
+    
+    flex-direction: column;
+    gap: 25%;
+}
+#button-bottom{
+    border: 2px solid black;
+    border-radius: 25px;
+    position: fixed;
+  bottom: 0;
+  left: 42%;
+}
+.form{
+    font-size: 9px;
+}
+
 .Bflex{
 
 display: flex;
